fixed the layout so that admin controls are always visible

--- a/app/assets/stylesheets/briefly.sass
+++ b/app/assets/stylesheets/briefly.sass
@@ -63,10 +63,13 @@ p
   font-family: 'Montserrat', sans-serif
   color: darkGray
 
-.article
+.article_wrap
   width: 100%
   height: 414px
   margin-top: 80px
+  position: relative
+
+.article
   display: block
   text-decoration: none
 
@@ -149,8 +152,9 @@ p
   display: block
 
 .admin_stats
-  float: left
   width: 200px
+  position: absolute
+  left: 0
   .item
     +button(#A2A2A2)
     cursor: default
@@ -158,9 +162,10 @@ p
       background: #A2A2A2
 
 .admin_controls
-  float: right
   text-align: right
   width: 350px
+  position: absolute
+  right: 0
 
 .footer
   width: 100%
